--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,6 +110,9 @@
                   <div class="bg-light p-5 contact-form">
                     <div class="form-group">
                       <input id="start" type="text" class="form-control" placeholder="Start location">
+
+                      <p>Check the box to get notifications:<input type="checkbox" id="sendSms"></p>
+
                     </div>
                     <div class="form-group">
                       <input id="end" type="text" class="form-control" placeholder="End location">
@@ -130,15 +133,15 @@
                 <div class="col-lg-4 sidebar">
 
                   <div class="sb-widget">
-                    <h2 class="sb-title">Subway</h2>
+                    <h1 class="sb-title">Get predictions for the next train</h1>
                     <ul class="sb-cata-list">
-                      <li><a href="blueline">Blue Line<span>20</span></a></li>
-                      <li><a href="greenlineB">Green Line B<span>23</span></a></li>
-                      <li><a href="greenlineC">Green Line C<span>25</span></a></li>
-                      <li><a href="greenlineD">Green Line D<span>17</span></a></li>
-                      <li><a href="greenlineE">Green Line E<span>15</span></a></li>
-                      <li><a href="orangeline">Orange Line<span>22</span></a></li>
-                      <li><a href="redline">Red Line<span>22</span></a></li>
+                      <li><a href="blueline">Blue Line<span></span></a></li>
+                      <li><a href="greenlineB">Green Line B<span></span></a></li>
+                      <li><a href="greenlineC">Green Line C<span></span></a></li>
+                      <li><a href="greenlineD">Green Line D<span></span></a></li>
+                      <li><a href="greenlineE">Green Line E<span></span></a></li>
+                      <li><a href="orangeline">Orange Line<span></span></a></li>
+                      <li><a href="redline">Red Line<span></span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -156,20 +159,20 @@
     <div class="container">
       <div class="row">
 
-      <div class="copyright"><a href="">
+      <!-- <div class="copyright"><a href="">
           <p>
             Copyright &copy;<script>
               document.write(new Date().getFullYear());
-            </script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Victor Tran</a>
+            </script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"> Colorlib</a>
           </p>
-      </div>
+      </div> -->
     </div>
     <div class="social-links-warp">
       <div class="container">
         <div class="social-links">
-          <a href="#"><i class="fa fa-instagram"></i><span>instagram</span></a>
-          <a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
-          <a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
+          <a href="https://www.linkedin.com/in/victorphitran/"><i class="fab fa-linkedin"></i><span>linkedin</span></a>
+          <a href="https://github.com/VictorTran-rc"><i class="fab fa-github-alt"></i></i><span>GitHub</span></a>
+          <a href="https://twitter.com/Victor95015112"><i class="fa fa-twitter"></i><span>twitter</span></a>
         </div>
       </div>
     </div>
@@ -186,7 +189,7 @@
   <script src="../js/main.js"></script>
   <script src="../js/map.js"></script>
   <script src="../js/favorites.js"></script>
-  <script src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyBCrlrUUk-AoKylJkMz4gagA3SCCpaakJU&parameters"></script>
+  <!-- <script src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyBCrlrUUk-AoKylJkMz4gagA3SCCpaakJU&parameters"></script> -->
 
 
 
