--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,50 +1,49 @@
 <!doctype html>
 <html>
+
 <head>
-    <title>Sign up</title>
-    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="public/login.">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
+  <title>Sign up</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/login.">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
+  <link rel="stylesheet" href="css/login.css" />
 </head>
+
 <body>
-<div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+  <div class="container">
+    <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Signup</h1>
+      <h1><span class="fa fa-sign-in"></span> Signup</h1>
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
+      <% if (message.length > 0) { %>
+      <div class="alert alert-danger"><%= message %></div>
+      <% } %>
 
-    <!-- LOGIN FORM -->
-    <form action="/signup" method="post">
+      <!-- LOGIN FORM -->
+      <form action="/signup" method="post">
         <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email">
+          <label>Email</label>
+          <input type="text" class="form-control" name="email">
         </div>
         <div class="form-group">
-            <label>Phone Number (Use XXX-XXX-XXXX Pattern): </label>
-            <input type="tel" class="form-control" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-            required>
+          <label>Phone Number (Use XXX-XXX-XXXX Pattern): </label>
+          <input type="tel" class="form-control" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
         </div>
         <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password">
+          <label>Password</label>
+          <input type="password" class="form-control" name="password">
         </div>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
-    </form>
+      </form>
 
-    <hr>
+      <hr>
 
-    <p>Already have an account? <a href="/login">Login</a></p>
-    <p>Or go <a href="/">home</a>.</p>
+      <p>Already have an account? <a href="/login">Login</a></p>
+      <p>Or go <a href="/">home</a>.</p>
 
-</div>
-</div>
+    </div>
+  </div>
 </body>
+
 </html>
