updated train pages

--- a/views/redline.ejs
+++ b/views/redline.ejs
@@ -245,9 +245,9 @@
 		<div class="social-links-warp">
 			<div class="container">
 				<div class="social-links">
-					<a href="#"><i class="fa fa-instagram"></i><span>instagram</span></a>
-					<a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
-					<a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
+					<a href="https://www.linkedin.com/in/victorphitran/"><i class="fab fa-linkedin"></i><span>linkedin</span></a>
+					<a href="https://github.com/VictorTran-rc"><i class="fab fa-github-alt"></i></i><span>GitHub</span></a>
+					<a href="https://twitter.com/Victor95015112"><i class="fa fa-twitter"></i><span>twitter</span></a>
 				</div>
 			</div>
 		</div>
