--- a/views/blueline.ejs
+++ b/views/blueline.ejs
@@ -189,24 +189,16 @@
 	<div class="footer-section">
 		<div class="container">
 
-			<div class="copyright">
-				<p>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>
-						document.write(new Date().getFullYear());
-					</script>This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Victor Tran</a>
-				</p>
-			</div>
 		</div>
 		<div class="social-links-warp">
-			<div class="container">
-				<div class="social-links">
-					<a href="#"><i class="fa fa-instagram"></i><span>instagram</span></a>
-					<a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
-					<a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
-				</div>
-			</div>
-		</div>
+      <div class="container">
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/victorphitran/"><i class="fab fa-linkedin"></i><span>linkedin</span></a>
+          <a href="https://github.com/VictorTran-rc"><i class="fab fa-github-alt"></i></i><span>GitHub</span></a>
+          <a href="https://twitter.com/Victor95015112"><i class="fa fa-twitter"></i><span>twitter</span></a>
+        </div>
+      </div>
+    </div>
 	</div>
 	<!-- Footer section end -->
 
